--- a/signup.html
+++ b/signup.html
@@ -10,7 +10,7 @@
 			<div id="box">	
 				<div id="create-account">
 					<h1>Create an account</h1> 
-					<form>
+					<form action="#" method="post" id="signin-form">
 						<div>
 							<input type="text" id="fname" placeholder="First Name"> 
 							<span id="fname-message"></span>
@@ -25,11 +25,12 @@
 						</div> 
 						<div>
 							<input type="password" id="pwd" placeholder="Password">
-						</div> 
-						<div>
-							<input type="password" id="cpwd" placeholder="Confirm Password"> 
 							<span id="pwd-message"></span>
-						</div>
+						</div> 
+						<!-- <div>
+							<input type="password" id="cpwd" placeholder="Confirm Password"> 
+							<span id="cpwd-message"></span>
+						</div> -->
 						<div>
 							<input id="submit-bttn" type="submit" name="Create Account" value="Create Account">
 						</div> 
@@ -38,6 +39,7 @@
 					<p>Have an account? <a href="index.html#login">Log in</a></p>
 				</div>
 
-			</div>
+			</div> 
+			<script type="text/javascript" src="js/formValidation.js"></script>
 		</body>
 	</html>
