--- a/index.html
+++ b/index.html
@@ -11,23 +11,23 @@
 				<nav>
 					<div id="nav-text">
 						<a href="index.html">
-							<!-- <i class="fa fa-home" aria-hidden="true"> --></i> Home
+							<i class="fa fa-home" aria-hidden="true"></i> Home
 						</a>  
 						
 						<span id="search">
 							<span id="search-control" >
-								<!-- <i class="fa fa-search" aria-hidden="true"></i> --> S
+								<i class="fa fa-search" aria-hidden="true"></i> 
 								<span id="search-s">Search</span> 
 							</span>
 							<span id="search-bar"><input type="text" name="search" placeholder="Search" id="search"></span>
 						</span>
 						
 						<span id="account">
-							<!-- <i class="fa fa-user" aria-hidden="true"></i> --> Log in
+							<i class="fa fa-user" aria-hidden="true"></i> Log in
 						</span> 
 					</div> 
-					<div id="login"> 
-						<div id="login-content">
+					<div id="acc-box"> 
+						<div id="acc-box-content">
 							<form action="#" method="post" id="login-form">
 								<div>
 									<input type="email" placeholder="Email"> 
@@ -105,7 +105,7 @@
 					</div>
 				</div> 
 				<footer>
-					<p>Copyright &copy;</p>
+					<p>Copyright &copy; <?php echo date('Y') ?>  </p>
 				</footer> 
 			</headder> 
 			<script src="https://use.fontawesome.com/228e8d7980.js"></script>  
