--- a/mod-nav.html
+++ b/mod-nav.html
@@ -22,11 +22,11 @@
 							<span id="search-bar"><input type="text" name="search" placeholder="Search" id="search"></span>
 						</span>
 						
-						<span id="account">
-							<img src="http://placehold.it/40x40"> <span id="acc-name">User</span>
+						<span id="account" >
+							<img src="http://placehold.it/40x40"> <span id="acc-name" class="clicked">User</span>
 						</span> 
 					</div> 
-					<div id="acc-box"> 
+					<div class="mod-nav" id="acc-box"> 
 						<ul>
 							<li><a href="#"><i class="fa fa-sign-out"></i> Log out</a></li>
 							<li><a href="account.html"><i class="fa fa-user"></i> My Account</a></li>
