--- a/signup.html
+++ b/signup.html
@@ -6,8 +6,9 @@
 			<meta name="description" content="Creat an account"> 		
 			<link rel="stylesheet" href="css/styles.css">
 		</head>
-		<body id="signup-background">
-			<div id="box">	
+		<body>
+			<div id="signup-background"></div>
+			<div id="box"> 	
 				<div id="create-account"> 
 					<h1>Create an account</h1> 
 					<form action="#" method="post" id="signin-form">
@@ -36,7 +37,7 @@
 						</div> 
 					</form> 
 					<hr> 
-					<p>Have an account? <a href="index.html#login">Log in</a></p>
+					<p>Have an account? <a href="index.html#acc-box">Log in</a></p>
 				</div>
 
 			</div> 
