working on hope page

--- a/account.html
+++ b/account.html
@@ -22,7 +22,7 @@
 							<span id="search-bar"><input type="text" name="search" placeholder="Search" id="search"></span>
 						</span>
 						
-						<span class="user-col"id="account">
+						<span class="clicked"id="account">
 							<img src="http://placehold.it/40x40"><span  id="acc-name">User</span>
 						</span> 
 					</div> 
