--- a/index.html
+++ b/index.html
@@ -52,8 +52,9 @@
 				<div id="content"> 
 					<div id= "d1"> 
 						<a href="new.html">
-							<img src="images/new.jpg">
-						</a>
+							<img src="images/new.jpg"> 
+						</a> 
+						<span class="cat-text"><h2>New Recipes</h2></span>
 					</div>
 					<div id="right-box">	
 						
