finished html and css

--- a/signup.html
+++ b/signup.html
@@ -37,7 +37,7 @@
 						</div> 
 					</form> 
 					<hr> 
-					<p>Have an account? <a href="index.html#acc-box">Log in</a></p>
+					<p>Have an account? <a href="index.html">Log in</a></p>
 				</div>
 
 			</div> 
